# quickdraws

./: .gitignore  Dockerfile  README.md  firth_logistic.py  pyproject.toml  requirements.txt  run_example.sh  run_example_bin.sh
.github/workflows/: pypi_wheels.yml  sync.yml  test_package.yml  test_ubuntu.yml
example/: covariates.txt  example.bgen.Se93933.metadata2.mmm  example.bim  example.kinship  example.sample  phenotypes.txt  phenotypes_binary.txt  unrelated_FID_IID.txt
quickdraws/: RHEmcmt  __init__.py  blr.py  cavi.py  convert_to_hdf5.py  correct_for_relatives.py  custom_linear_regression.py  firth_logistic.py  ldscore_calibration.py  preprocess_phenotypes.py  runRHE.py
quickdraws/scripts/: __init__.py  convert_to_hdf5.py  quickdraws_step1.py  quickdraws_step2.py
scripts/: quickdraws_step2.py
src/: GENIE_multi_pheno  blr.py  cavi.py  convert_to_hdf5.py  correct_for_relatives.py  custom_linear_regression.py  firth_logistic.py  ldscore_calibration.py  preprocess_phenotypes.py  quickdraws_step1.py  quickdraws_step2.py  runRHE.py
