[tool.poetry]
name = "quickdraws"
version = "0.0.2"
description = "Quickdraws is a software tool for performing Genome-Wide Association Studies (GWAS)"
authors = ["Palamara Lab"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
h5py = "*"
joblib = "*"
numba = "*"
numpy = "<2"
pandas = "*"
pysnptools = { version = "*", extras = ["bgen"] }
scikit_learn = "*"
scipy = "*"
statsmodels = "*"
tqdm = "*"
wandb = "*"
tables = "*"
bitsandbytes = "*"
pybgen = "*"
rhe = "==1.0.0"
torch = { version = "2.*", source = "pytorch-cu118" }

[tool.poetry.dev-dependencies]
pip = ">=23"
setuptools = ">=68"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.scripts]
quickdraws-step-1 = "quickdraws.scripts.quickdraws_step1:main"
quickdraws-step-2 = "quickdraws.scripts.quickdraws_step2:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
