[tool.poetry]
name = "quickdraws"
version = "0.1.4"
description = "Quickdraws is a software tool for performing Genome-Wide Association Studies (GWAS)"
authors = ["Palamara Lab"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
h5py = "*"
joblib = "*"
numba = "*"
numpy = "*"
pandas = "*"
pysnptools = { version = ">=0.5.13", extras = ["bgen"] }
scikit_learn = "*"
scipy = "*"
statsmodels = "*"
bgen_reader = "4.0.8"
tqdm = "*"
wandb = "*"
tables = "^3.10.1"
bitsandbytes = { version = "*", markers = "sys_platform == 'linux'" }
pybgen = "*"
rhe = "==1.0.0"
torch = "*"

[poetry.group.dev.dependencies]
pip = ">=23"
setuptools = ">=68"

[[tool.poetry.source]]
name = "torch_linux_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[tool.poetry.scripts]
quickdraws-step-1 = "quickdraws.scripts.quickdraws_step1:main"
quickdraws-step-2 = "quickdraws.scripts.quickdraws_step2:main"
convert-to-hdf5 = "quickdraws.scripts.convert_to_hdf5:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
